working on lists app

--- a/foodlist/templates/base.html
+++ b/foodlist/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 
 <header class="w3-container w3-deep-purple">
-<h1> Matlistan </h1>
+<h1> Hejsan </h1>
 </header>
 
 {% block content %}
@@ -27,7 +27,9 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://unpkg.com/vue"></script>
 <script src="{% static 'foodlist/jquery-2.2.4.js' %}"></script>
+<script src="{% static 'foodlist/vue2.2.4.js' %}"></script>
 {% block script %}
 {% endblock %}
 </html>
