Basic list frontend implemented

--- a/foodlist/templates/base.html
+++ b/foodlist/templates/base.html
@@ -8,6 +8,9 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" href="{% static 'foodlist/style.css' %}">
+    <link rel="stylesheet" href="{% static 'foodlist/w3.css' %}">
+    <link rel="stylesheet" href="{% static 'foodlist/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
